--- a/hongquan/widget/activity/activity.less
+++ b/hongquan/widget/activity/activity.less
@@ -4,6 +4,11 @@
 */
 
 .mod-activity-detail {
+  .activity-box{
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+
+  }
   .activity-info {
     .px2rem(margin-bottom,20);
     .img {
